# CudaOT

./: CMakeCache.txt  CMakeLists.txt  CplexTransportNetwork.cpp  Dense_LP.cpp  FastEMD  FastEMD.cpp  LogDomainSK  LogDomainSK.cpp  Makefile  Multiscale  Multiscale.cpp  README.md  ShortCut.cpp  Sinkhorn_solver.cpp  SparseSK  SparseSK.cpp  cmake_install.cmake
3D Wasserstein Distance/: output_distmatrix.mat  plot2D_projection.m  plot3D_Wasserstein.m
Color transfer between images/: Multi_scale_Color_Transfer.ipynb  README.MD  SparseSinkhorn.py  example estimating subset.ipynb  example_log_domain.ipynb  mytools.py
Common/: CMakeLists.txt  Makefile  MultiScaleTools.cpp  PythonTypes.h  TEpsScaling.cpp  THierarchicalCostFunctionProvider.cpp  THierarchicalPartition.cpp  THierarchyBuilder.cpp  basic_settings.h  basic_tools_.h  cmake_install.cmake  data_struct.h  eps_handler.cpp  eps_handler.h  family.cpp  family.h  handler_cuda_error.h  layer_manage.h  memory_manage.h  print_helpers.h  verbose_helper.h
Common/Models/: Makefile  cmake_install.cmake
LP_CPLEX/: CMakeLists.txt  Makefile  cmake_install.cmake
LP_Lemon/: CMakeLists.txt  Makefile  cmake_install.cmake
LogSinkhorn/: CMakeLists.txt  Makefile  cmake_install.cmake  log_sinkhorn.cu  log_sinkhorn.h
M3S/: CMakeLists.txt  Makefile  cmake_install.cmake  image_ot_solver.cu  image_ot_solver.h  kernel_manage.h  solver.cu
ShieldingSolver/: CMakeLists.txt  Makefile
ShortCutSolver/: Makefile  cmake_install.cmake
Sinkhorn/: CMakeLists.txt  Makefile  TSinkhornKernel.cpp  TSinkhornKernel.h  TSinkhornSolver.cpp  cmake_install.cmake
SparseSinkhorn/: CMakeCache.txt  Makefile  cmake_install.cmake  kernel_manage.cu  solver.cu  solver.h  verbose_helper.cu
SparseSinkhorn/dpct_output/: MainSourceFiles.yaml  kernel_manage.dp.cpp  kernel_manage.h  kernel_manage.h.yaml
data/: README.ME
ect/: cost_test.cpp  matrix_test.cu  matrixbase.cpp  matrixbase.h  testmemory.cpp
pythonExample/sparseOT/: computemin.cpp  computemin.cu  computemin.h  dist_matrix  dist_matrix_15000  indices_15000  log_sinkhorn_sparse.py  mn  mn_15000  modifiedsinkhorn.py  sparse_OT.py  sparse_transport.py
